deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sqstesting-service
spec:
  selector:
    app: sqstesting
  ports:
    - name: https
      port: 8080
      targetPort: 8080
